# api

./: .env  .env.example  .gitignore  Cargo.toml  README.md  build.rs  justfile  lefthook.yaml  package.json  pnpm-lock.yaml  readme.md  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: rust.yaml  rust.yaml.bak  tests.yaml
.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-2e1c5af76cad24f58864bf2135c6610132317833617f73806314a8d9c916de44.json  query-32335750de218eff8779874b194d6dba9297014fdb448501743b13f1996c8014.json  query-37d057090f153a39e1dc766c9751884ce0b1d22218f01beb8929473e63df961a.json  query-594ad5bc6ca987cb65fa7ceded997284b62c702627c41044ff4c5d405d5563ee.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-c22ffaca876ea0faaf62be84142ce04d7282e72eeca46b8442169616fb3ddf9b.json  query-cf4926332e96689c3754d2233149e04014b5391c412ea7c7bdf5a0e7c27a6df1.json  query-d08992cf2c132fedbed21b94d545e154fa2a7a2a2bf79fd033341d1bb5a6c0f2.json  query-f6d230b1953d04e7e7a77940af9a3533c02592afa6b50c5828381328d18b9e70.json
benches/: user.rs
docker/: Dockerfile  compose.dev.yaml  docker-compose.dev.yaml  vmagent.yaml
src/: config.rs  helpers.rs  lib.rs  main.rs
src/application/: config.rs  mod.rs
src/application/dtos/: mod.rs  summary.rs
src/application/dtos/auth/: requests.rs  responses.rs
src/application/dtos/user/: mod.rs  requests.rs  responses.rs
src/application/dtos/user/api_key/: requests.rs  responses.rs
src/application/handlers/: auth.rs  mod.rs  summary.rs
src/application/handlers/user/: api_key.rs  mod.rs
src/domain/errors/: mod.rs
src/domain/models/: api_key.rs  mod.rs  user.rs
src/domain/repositories/: mod.rs  summary.rs  user.rs
src/domain/repositories/user/: api_key.rs  mod.rs
src/domain/services/: auth.rs  mod.rs  summary.rs  user.rs
src/domain/services/user/: api_key.rs  mod.rs
src/infrastructure/: kafka.rs  mod.rs  redis.rs  session_store.rs  tracing.rs
src/infrastructure/database/: mod.rs
src/infrastructure/database/migrations/: 20230720115825_create_users.down.sql  20230720115825_create_users.up.sql  20230803111335_create_api_keys.down.sql  20230803111335_create_api_keys.up.sql  20231022202727_create_users_table.up.sql
src/infrastructure/prometheus/: metrics.rs  mod.rs
src/presentation/dtos/: pagination.rs  user.rs
src/presentation/handlers/: mod.rs  user.rs
src/proc_macros/: Cargo.toml
src/proc_macros/src/: lib.rs
tests/: user.rs
