cargo-features = ["profile-rustflags"]

[package]
name = "prorub-api"
version = "0.0.0"
edition = "2021"
rust-version = "1.73.0"

[dependencies]
argon2 = { version = "0.5.1", default-features = false, features = ["alloc"]}
base64 = { version = "0.21.2", default-features = false }
chrono = { version = "0.4.26", default-features = false }
derivative = { version = "2.2.0", default-features = false }
dotenv = { version = "0.15.0", default-features = false }
futures-channel = { version = "0.3.28", default-features = false }
futures-util = { version = "0.3.28", default-features = false }
once_cell = "1.18.0"
poem = { version = "1.3.57", default-features = false, features = ["redis-session", "test", "websocket"] }
poem-openapi = { version = "3.0.2", default-features = false, features = ["swagger-ui", "chrono", "email"] }
prometheus = { version = "0.13.3", default-features = false }
rand = { version = "0.8.5", default-features = false }
rdkafka = { version = "0.33.2", default-features = false, features = ["tokio"] }
redis = { version = "0.23.2", default-features = false, features = ["aio", "connection-manager", "tokio-comp", "tokio-rustls-comp"] }
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.104", default-features = false }
sqlx = { version = "0.7.1", default-features = false, features = ["macros", "postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = { version = "1.0.45", default-features = false }
tokio = { version = "1.31.0", default-features = false, features = ["full", "rt-multi-thread", "macros"] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt"]}

[profile.dev]
# rustflags = ["-A", "dead_code", "-A", "unused"]
