[package]
name = "api"
version = "0.0.0"
publish = false
edition = "2021"
rust-version = "1.73.0"

[dependencies]
argon2 = { version = "0.5.2", default-features = false, features = ["alloc"]}
base64 = { version = "0.21.3", default-features = false }
chrono = { version = "0.4.30", default-features = false }
derivative = { version = "2.2.0", default-features = false }
dotenv = { version = "0.15.0", default-features = false }
futures-channel = { version = "0.3.28", default-features = false }
futures-util = { version = "0.3.28", default-features = false }
once_cell = { version = "1.18.0", default-features = false }
poem = { version = "1.3.58", default-features = false, features = ["redis-session", "test", "websocket"] }
poem-openapi = { version = "3.0.5", default-features = false, features = ["swagger-ui", "chrono", "email"] }
prometheus = { version = "0.13.3", default-features = false }
rand = { version = "0.8.5", default-features = false }
rdkafka = { version = "0.34.0", default-features = false, features = ["tokio"] }
redis = { version = "0.23.3", default-features = false, features = ["aio", "connection-manager", "tokio-comp", "tokio-rustls-comp"] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.105", default-features = false }
sqlx = { version = "0.7.1", default-features = false, features = ["macros", "postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = { version = "1.0.48", default-features = false }
tokio = { version = "1.32.0", default-features = false, features = ["full", "rt-multi-thread", "macros"] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["fmt"]}
proc_macros = { path = "./src/proc_macros" }
tokio-stream = { version = "0.1.14", default-features = false }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio", "html_reports"] }

[workspace]
members = ["src/proc_macros"]

[[bench]]
name = "user"
harness = false
