[package]
name = "kladez-api"
version = "0.0.0"
authors = ["Roman Ilin <me@romanilin.me>"]
edition = "2021"
rust-version = "1.74.0"
description = "API that allows developers to interface with Kladez's package ecosystem, enabling programmatic package installation, removal, updates, and queries."
homepage = "https://github.com/kladez/api"
repository = "https://github.com/kladez/api"
license = "MIT"
keywords = ["api", "kladez", "package", "manager"]
categories = ["web-programming::http-server"]
publish = false

[dependencies]
axum = { version = "0.7.2", default-features = false, features = ["json", "http1", "query", "macros", "tokio", "tracing"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.2", default-features = false, features = ["chrono", "macros", "migrate", "postgres", "runtime-tokio", "tls-rustls"] }
time = { version = "0.3.30", default-features = false }
tokio = { version = "1.34.0", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", default-features = false, features = ["trace"] }
tower-sessions = { version = "0.7.0", default-features = false, features = ["axum-core", "redis-store"] }
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[lints.clippy]
pedantic = "warn"
cargo = "warn"
